# scout-mcp

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
assets/: demo-form.html
assets/demos/: scout-export-schedule.html  scout-hacker-news.html  scout-network-discovery.html  scout-scout.html
benchmarks/: tasks.yaml
commands/: benchmark.md  connect.md  demo.md  export-workflow.md  landscape-template.md  landscape.md  report.md  run.md  schedule.md  scout.md  status.md  sync.md
demos/: scout-demo.html  scout-demo.json
docs/: 2026-03-07-engine-integration-design.md  2026-03-07-engine-integration-plan.md  CLAUDE.md  chrome-extension.md  getting-started.md  macos-setup.md  phase-theater.html  scenario-catalog.md  scout-artifact-style-prompt.md  scout-narrative-build-prompt.md  scout-strategic-overview.jsx  security-model.md  showcase.html  submission-form-answers.md  universal-adapter.html
docs/benchmarks/: benchmark-results-v0.1.md  benchmark-results-v0.2.md  benchmark-results-v0.3.md  benchmark-results-v0.4.md
docs/features/: LANDSCAPE_PLUGIN_BRIEF.md
docs/pending/: 2026-03-03-readme-story-arc-design.md  2026-03-03-readme-story-arc-plan.md
docs/plans/: 2026-03-07-screenshot-action.md  2026-03-09-readme-design.md  2026-03-09-standalone-mcp-server-design.md  2026-03-09-standalone-mcp-server-plan.md
extension/: background.js  manifest.json  popup.html  popup.js
hooks/: check-deps.sh
native-messaging-host/: com.scout.bridge.json.template  scout_nm_host.py
npm/: README.md  index.js  package.json
scripts/: capture_annotated_demos.py  capture_demo_frames.py  screenshot-showcase.py
skills/release/: SKILL.md
skills/scout/: SKILL.md
src/scout/: __init__.py  actions.py  browse.py  download_manager.py  engine.py  extension_relay.py  history.py  models.py  native_messaging.py  network.py  otp.py  profile_clone.py  providers.py  sanitize.py  scout.py  screencast.py  secrets.py  (+5 more)
tests/: conftest.py  test_actions.py  test_annotated_capture.py  test_browse.py  test_bugfixes.py  test_empty_result_guard.py  test_engine.py  test_extension_relay.py  test_history_archive.py  test_integration.py  test_models.py  test_native_messaging_host.py  test_native_messaging_registration.py  test_otp.py  test_profile.py  test_profile_clone.py  test_providers.py  test_recording_models.py  test_sanitize.py  test_scheduler_base.py  test_scheduler_linux.py  test_scheduler_macos.py  test_scheduler_tools.py  test_scheduler_windows.py  test_scout_filters.py  test_screencast.py  test_screenshot_save.py  test_smart_form.py  test_tokencount.py  test_upload_file.py  test_validation.py  test_vault_integration.py  test_workflow.py
video/: package-lock.json  package.json  render.sh  tsconfig.json
(+40 files in other folders)
