[project]
name = "scout-mcp-server"
version = "1.8.1"
description = "MCP server for browser automation with anti-detection. Scout pages, find elements, interact with websites, and monitor network traffic."
requires-python = ">=3.11"
authors = [{name = "sdoherty"}]
license = {text = "MIT"}
readme = "README.md"
keywords = ["mcp", "browser", "automation", "anti-detection", "stealth", "botasaurus", "model-context-protocol"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "botasaurus-driver>=4.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "trafilatura>=1.6.0",
    "pyyaml>=6.0",
    "defusedxml>=0.7.0",
    "websockets>=13.0",
    "tldextract>=5.3.1",
    "tiktoken>=0.7.0",
]

[project.scripts]
scout-mcp-server = "scout.server:main"

[project.urls]
Homepage = "https://github.com/stemado/scout-mcp"
Repository = "https://github.com/stemado/scout-mcp"
Issues = "https://github.com/stemado/scout-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scout"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests requiring a real browser (deselect with -m 'not integration')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.0.0",
]
